syntax = "proto3";

/*

"clang-format.style": "{ BasedOnStyle: LLVM, UseTab: Never, IndentWidth: 4, TabWidth:
  4, BreakBeforeBraces: Mozilla, AllowShortIfStatementsOnASingleLine: false,
  IndentCaseLabels: false, ColumnLimit: 90, AccessModifierOffset: -4,
  NamespaceIndentation: All, FixNamespaceComments: false }",

*/

option go_package = "github.com/lysShub/itun/control/internal";

package internal;

service Control
{
    rpc Crypto(Bool) returns (Null) {}
    rpc IPv6(Null) returns (Bool) {}
}

// todo: 无用
enum MgrType
{

    enum_start = 0;

    MgrSegCrypto = 1;
    MgrSegIPv6 = 2;
    MgrSegEndConfig = 3;
    MgrSegAddTCP = 4;
    MgrSegDelTCP = 5;
    MgrSegAddUDP = 6;
    MgrSegDelUDP = 7;
    MgrSegPackLoss = 8;
    MgrSegPing = 9;

    enum_end = 10;
}

message Null {}

message Bool { bool Value = 1; }
